renames variables for consistency

--- a/DDPG_Tennis.ipynb
+++ b/DDPG_Tennis.ipynb
@@ -225,7 +225,7 @@
     "import progressbar as pb\n",
     "\n",
     "\n",
-    "def train(maddpg, env, n_episodes=1000, max_t=1000, save_every=50):\n",
+    "def train(ddpg, env, n_episodes=1000, max_t=1000, save_every=50):\n",
     "    widget = [\n",
     "        \"Episode: \", pb.Counter(), '/' , str(n_episodes), ' ', \n",
     "        pb.Percentage(), ' ', pb.ETA(), ' ', pb.Bar(marker=pb.RotatingMarker()), ' ', \n",
@@ -247,17 +247,17 @@
     "        env_info = env.reset(train_mode=True)[brain_name]\n",
     "        states = env_info.vector_observations[:, -STATE_SIZE:]\n",
     "        scores = np.zeros(num_agents)\n",
-    "        maddpg.reset()\n",
+    "        ddpg.reset()\n",
     "        \n",
     "        while True:\n",
-    "            actions = maddpg.act(states)\n",
+    "            actions = ddpg.act(states)\n",
     "            \n",
     "            env_info = env.step(actions)[brain_name]\n",
     "            next_states = env_info.vector_observations[:, -STATE_SIZE:]\n",
     "            rewards = env_info.rewards\n",
     "            dones = env_info.local_done\n",
     "            \n",
-    "            maddpg.step(states, actions, rewards, next_states, dones)\n",
+    "            ddpg.step(states, actions, rewards, next_states, dones)\n",
     "            \n",
     "            scores += rewards\n",
     "            states = next_states\n",
@@ -277,19 +277,19 @@
     "            best_score = average_score\n",
     "            if solved:\n",
     "                # This model is better than a previously saved model, so we'll save it\n",
-    "                maddpg.save_model()\n",
+    "                ddpg.save_model()\n",
     "        \n",
     "        if average_score >= 0.5 and not solved:\n",
     "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(\n",
     "                i_episode, average_score\n",
     "            ))\n",
     "            solved = True\n",
-    "            maddpg.save_model()\n",
+    "            ddpg.save_model()\n",
     "        \n",
     "        if i_episode % save_every == 0 and not solved:\n",
-    "            maddpg.save_model()\n",
+    "            ddpg.save_model()\n",
     "\n",
-    "    maddpg.save_model()\n",
+    "    ddpg.save_model()\n",
     "\n",
     "    return scores_total, rolling_score_averages"
    ]
@@ -302,7 +302,7 @@
    "source": [
     "from DDPG.ddpg_agent import DDPGAgent\n",
     "\n",
-    "maddpg = DDPGAgent(STATE_SIZE, ACTION_SIZE, NUM_AGENTS)"
+    "ddpg = DDPGAgent(STATE_SIZE, ACTION_SIZE, NUM_AGENTS)"
    ]
   },
   {
@@ -334,7 +334,7 @@
     }
    ],
    "source": [
-    "scores_total, rolling_score_averages = train(maddpg, env, n_episodes=1000)"
+    "scores_total, rolling_score_averages = train(ddpg, env, n_episodes=1000)"
    ]
   },
   {
@@ -453,7 +453,7 @@
     }
    ],
    "source": [
-    "test(maddpg, env, num_games=5, load_model=True)"
+    "test(ddpg, env, num_games=5, load_model=True)"
    ]
   }
  ],
