adds basis for report #3

--- a/Tennis.ipynb
+++ b/Tennis.ipynb
@@ -21,8 +21,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
     "from unityagents import UnityEnvironment\n",
-    "import numpy as np"
+    "\n",
+    "from MADDPG.hyperparameters import *"
    ]
   },
   {
@@ -74,7 +79,11 @@
     }
    ],
    "source": [
-    "env = UnityEnvironment(file_name=\"Tennis.app\")"
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "random.seed(RANDOM_SEED)\n",
+    "np.random.seed(RANDOM_SEED)\n",
+    "\n",
+    "env = UnityEnvironment(seed=RANDOM_SEED, file_name=\"Tennis.app\")"
    ]
   },
   {
@@ -150,107 +159,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Train the Agent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "import torch\n",
-    "from collections import deque\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "%load_ext autoreload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%autoreload 1\n",
-    "%aimport main\n",
-    "\n",
-    "tennis_model = main.TennisPlayingModel(env, num_episodes=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Episode: 33/100  33% ETA:  0:00:11 |/////            | Rolling Average: 0.00593\r"
-     ]
-    }
-   ],
-   "source": [
-    "# Train\n",
-    "tennis_model.train(stop_on_solve=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot Training Progress\n",
-    "tennis_model.plot_training_progress()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5. Test the Agent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'MADDPG' object has no attribute 'act'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-----------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-8510410670f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Watch Smart Agent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtennis_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_games\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mload_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Workspace/edu/deep-reinforcement-learning/p3_collab-compet/main.py\u001b[0m in \u001b[0;36mtest\u001b[0;34m(self, num_games, load_model)\u001b[0m\n\u001b[1;32m    262\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    263\u001b[0m             \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 264\u001b[0;31m                 \u001b[0mactions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmaddpg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mact\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobservations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    265\u001b[0m                 \u001b[0mactions_array\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    266\u001b[0m                 \u001b[0mactions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrollaxis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactions_array\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'MADDPG' object has no attribute 'act'"
-     ]
-    }
-   ],
-   "source": [
-    "# Watch Smart Agent\n",
-    "tennis_model.test(num_games=10, load_model=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# When finished, close the environment\n",
-    "tennis_model.terminate_env()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 3. Take Random Actions in the Environment\n",
     "\n",
     "In the next code cell, you will learn how to use the Python API to control the agents and receive feedback from the environment.\n",
@@ -264,7 +172,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score (max over agents) from episode 1: 0.0\n",
+      "Score (max over agents) from episode 2: 0.0\n",
+      "Score (max over agents) from episode 3: 0.0\n",
+      "Score (max over agents) from episode 4: 0.0\n",
+      "Score (max over agents) from episode 5: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 6):                                      # play game for 5 episodes\n",
     "    env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
@@ -286,13 +206,141 @@
     "    \n",
     "    print('Score (max over agents) from episode {}: {}'.format(i, np.max(scores)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Train the Agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MADDPG wrapper\n",
+    "from MADDPG.maddpg_agent import MADDPGAgent\n",
+    "# Training and testing MADDPG helpers\n",
+    "from MADDPG.main import plot_results, test, train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Agent #1\n",
+      "Actor (Local):\n",
+      "Actor(\n",
+      "  (fc1): Linear(in_features=24, out_features=512, bias=True)\n",
+      "  (fc2): Linear(in_features=512, out_features=256, bias=True)\n",
+      "  (fc3): Linear(in_features=256, out_features=2, bias=True)\n",
+      ")\n",
+      "Actor (Target):\n",
+      "Actor(\n",
+      "  (fc1): Linear(in_features=24, out_features=512, bias=True)\n",
+      "  (fc2): Linear(in_features=512, out_features=256, bias=True)\n",
+      "  (fc3): Linear(in_features=256, out_features=2, bias=True)\n",
+      ")\n",
+      "Critic (Local):\n",
+      "Critic(\n",
+      "  (fcs1): Linear(in_features=52, out_features=512, bias=True)\n",
+      "  (fc2): Linear(in_features=512, out_features=256, bias=True)\n",
+      "  (fc3): Linear(in_features=256, out_features=1, bias=True)\n",
+      ")\n",
+      "Critic (Target):\n",
+      "Critic(\n",
+      "  (fcs1): Linear(in_features=52, out_features=512, bias=True)\n",
+      "  (fc2): Linear(in_features=512, out_features=256, bias=True)\n",
+      "  (fc3): Linear(in_features=256, out_features=1, bias=True)\n",
+      ")\n",
+      "_______________________________________________________________\n",
+      "Agent #2\n",
+      "Actor (Local):\n",
+      "Actor(\n",
+      "  (fc1): Linear(in_features=24, out_features=512, bias=True)\n",
+      "  (fc2): Linear(in_features=512, out_features=256, bias=True)\n",
+      "  (fc3): Linear(in_features=256, out_features=2, bias=True)\n",
+      ")\n",
+      "Actor (Target):\n",
+      "Actor(\n",
+      "  (fc1): Linear(in_features=24, out_features=512, bias=True)\n",
+      "  (fc2): Linear(in_features=512, out_features=256, bias=True)\n",
+      "  (fc3): Linear(in_features=256, out_features=2, bias=True)\n",
+      ")\n",
+      "Critic (Local):\n",
+      "Critic(\n",
+      "  (fcs1): Linear(in_features=52, out_features=512, bias=True)\n",
+      "  (fc2): Linear(in_features=512, out_features=256, bias=True)\n",
+      "  (fc3): Linear(in_features=256, out_features=1, bias=True)\n",
+      ")\n",
+      "Critic (Target):\n",
+      "Critic(\n",
+      "  (fcs1): Linear(in_features=52, out_features=512, bias=True)\n",
+      "  (fc2): Linear(in_features=512, out_features=256, bias=True)\n",
+      "  (fc3): Linear(in_features=256, out_features=1, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "maddpg = MADDPGAgent(NUM_AGENTS, STATE_SIZE, ACTION_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Episode: 2917/3000  97% ETA:  0:02:11 |\\\\\\\\\\\\\\\\\\\\\\\\\\\\ | Rolling Average: 0.0541\r"
+     ]
+    }
+   ],
+   "source": [
+    "scores_total, rolling_score_averages = train(maddpg, env, n_episodes=3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_results(scores_total, rolling_score_averages)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Test the Agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(ddpg, env, num_games=5, load_model=True)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "drlnd",
    "language": "python",
-   "name": "python3"
+   "name": "drlnd"
   },
   "language_info": {
    "codemirror_mode": {
